--- a/infra/postgre/docker-compose.yml
+++ b/infra/postgre/docker-compose.yml
@@ -6,7 +6,7 @@ version: '3.5'
 services:
   postgres:
     container_name: postgres_container
-    image: postgres
+    image: postgres:11.11
     environment:
       POSTGRES_USER: ${POSTGRES_USER:-postgres}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-changeme}
